<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_perm_identity_24"
            android:title="@string/menu_datos" />
        <item
            android:id="@+id/nav_pictures"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pictures" />
        <item
            android:id="@+id/nav_assembly"
            android:icon="@drawable/icon_assembly"
            android:title="@string/menu_assembly" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/zm_ic_chat_info"
            android:title="@string/menu_more_info"
            />
    </group>
</menu>