<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.home.InfoFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/infoTvTitleMission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_title_mission"
            android:textSize="18sp"
            android:textColor="@color/green_kelp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoTVContentMission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_content_mission"
            app:layout_constraintTop_toBottomOf="@+id/infoTvTitleMission" />

        <TextView
            android:id="@+id/infoTVTitleVision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_title_vision"
            android:textSize="18sp"
            android:textColor="@color/green_kelp"
            android:textStyle="bold"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/infoTVContentMission" />

        <TextView
            android:id="@+id/infoTVContentVision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_content_vision"
            app:layout_constraintTop_toBottomOf="@+id/infoTVTitleVision" />
        <TextView
            android:id="@+id/infoTVTitleValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_title_values"
            android:textSize="18sp"
            android:textColor="@color/green_kelp"
            android:textStyle="bold"
            android:layout_marginTop="15sp"

            app:layout_constraintTop_toBottomOf="@+id/infoTVContentVision"/>
        <TextView
            android:id="@+id/infoTVContentValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_content_values"
            app:layout_constraintTop_toBottomOf="@+id/infoTVTitleValues"/>
</androidx.constraintlayout.widget.ConstraintLayout>